--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "expo-dev-client": "~4.0.28",
-    "expo-image": "~1.13.0"
+    "expo-image": "~1.13.0",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
